--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
          
 
             <a href="https://github.com/JPQuirke/Personal-Information" target="_blank">
-                <img src="C:/Users/bobst/Downloads/space/docs/Images/png-transparent-github-computer-icons-github-logo-monochrome-head-thumbnail.png"alt  style="width:50px; height:50px;">
+                <img src="../docs/Images/png-transparent-github-computer-icons-github-logo-monochrome-head-thumbnail.png"alt  style="width:50px; height:50px;">
               </a>
           </div>
         
