--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Josh Quirke's Portfolio</h1>
-        <img src="C:\Users\bobst\Downloads\space\docs\Images\Josh-Quirke.jpg.jpg" alt="Your Name" class="profile-image">
+        <img src="Images\Josh-Quirke.jpg.jpg" alt="Your Name" class="profile-image">
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
