--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div>
                 <!-- LinkedIn link with image -->
                 <a href="https://www.linkedin.com/in/josh-quirke-22068028b/" target="_blank">
-                <img src= "C:\Users\bobst\Downloads\space\docs\linkedin.jpg"alt="Connect on LinkedIn" style="width:50px; height:50px;">
+                <img src= "/docs/linkedin.jpg "alt="Connect on LinkedIn" style="width:50px; height:50px;">
                 </a>
             
             
