--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Josh Quirke's Portfolio</h1>
-        <img src="C:\Users\bobst\Downloads\space\docs\Josh-Quirke.jpg.jpg" alt="Your Name" class="profile-image">
+        <img src="C:/Users/bobst/Downloads/space/docs/Josh-Quirke.jpg.jpg" alt="Your Name" class="profile-image">
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -116,7 +116,7 @@
             <div>
                 <!-- LinkedIn link with image -->
                 <a href="https://www.linkedin.com/in/josh-quirke-22068028b/" target="_blank">
-                <img src= ""alt="Connect on LinkedIn" style="width:50px; height:50px;">
+                <img src= "C:\Users\bobst\Downloads\space\docs\linkedin.jpg"alt="Connect on LinkedIn" style="width:50px; height:50px;">
                 </a>
             
             
